--- a/app/src/main/res/layout/activity_change_pwd.xml
+++ b/app/src/main/res/layout/activity_change_pwd.xml
@@ -29,7 +29,7 @@
         android:background="@drawable/border_shape_bg_color"
         android:orientation="vertical">
         <com.android.mb.movie.widget.ContainsEmojiEditText
-            android:id="@+id/et_account"
+            android:id="@+id/et_old_pwd"
             android:layout_width="match_parent"
             android:layout_height="50dp"
             android:layout_marginLeft="20dp"
@@ -39,17 +39,17 @@
             android:background="@null"
             android:imeOptions="actionNext"
             android:singleLine="true"
-            android:drawableLeft="@mipmap/login_phone_back"
+            android:drawableLeft="@mipmap/login_password_back"
             android:drawablePadding="10dp"
             android:inputType="text"
-            android:hint="手机号"
+            android:hint="旧密码"
             android:textColor="@color/gray_45"
             android:textColorHint="@color/base_gray"
             android:textSize="16sp"
             tools:ignore="TextFields" />
         <include layout="@layout/common_divider" />
         <com.android.mb.movie.widget.ContainsEmojiEditText
-            android:id="@+id/et_pwd"
+            android:id="@+id/et_new_pwd"
             android:layout_width="match_parent"
             android:layout_height="60dp"
             android:layout_marginLeft="20dp"
@@ -61,27 +61,14 @@
             android:drawableLeft="@mipmap/login_password_back"
             android:drawablePadding="10dp"
             android:inputType="textPassword"
-            android:hint="密码"
+            android:hint="新密码"
             android:textColor="@color/gray_45"
             android:textColorHint="@color/base_gray"
             android:textSize="16sp"
             tools:ignore="TextFields" />
     </LinearLayout>
     <TextView
-        android:id="@+id/tv_forget_pwd"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="right"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:gravity="center"
-        android:text="忘记密码?"
-        android:textColor="@color/base_gray"
-        android:textSize="14sp" />
-    <TextView
-        android:id="@+id/tv_login"
+        android:id="@+id/tv_register"
         android:layout_width="match_parent"
         android:layout_height="48dp"
         android:layout_marginTop="10dp"
@@ -90,21 +77,7 @@
         android:enabled="false"
         android:background="@color/base_brown_light"
         android:gravity="center"
-        android:text="登录"
+        android:text="提交"
         android:textColor="@color/white"
-        android:textSize="16sp" />
-    <TextView
-        android:id="@+id/tv_register"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_gravity="center"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:gravity="center"
-        android:text="注册新账号"
-        android:textColor="@color/base_brown"
         android:textSize="16sp" />
 </LinearLayout>
