--- a/app/src/main/res/layout/activity_forget_pwd.xml
+++ b/app/src/main/res/layout/activity_forget_pwd.xml
@@ -61,26 +61,7 @@
             android:drawableLeft="@mipmap/login_password_back"
             android:drawablePadding="10dp"
             android:inputType="textPassword"
-            android:hint="密码"
-            android:textColor="@color/gray_45"
-            android:textColorHint="@color/base_gray"
-            android:textSize="16sp"
-            tools:ignore="TextFields" />
-        <include layout="@layout/common_divider" />
-        <com.android.mb.movie.widget.ContainsEmojiEditText
-            android:id="@+id/et_invite_code"
-            android:layout_width="match_parent"
-            android:layout_height="60dp"
-            android:layout_marginLeft="20dp"
-            android:layout_marginRight="20dp"
-            android:singleLine="true"
-            android:imeOptions="actionDone"
-            android:maxLength="16"
-            android:background="@null"
-            android:drawableLeft="@mipmap/invite_regist_back"
-            android:drawablePadding="10dp"
-            android:inputType="textPassword"
-            android:hint="邀请码"
+            android:hint="新密码"
             android:textColor="@color/gray_45"
             android:textColorHint="@color/base_gray"
             android:textSize="16sp"
@@ -133,21 +114,7 @@
         android:enabled="false"
         android:background="@color/base_brown_light"
         android:gravity="center"
-        android:text="注册"
+        android:text="提交"
         android:textColor="@color/white"
-        android:textSize="16sp" />
-    <TextView
-        android:id="@+id/tv_login"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="50dp"
-        android:layout_gravity="center"
-        android:paddingTop="10dp"
-        android:paddingBottom="10dp"
-        android:paddingLeft="20dp"
-        android:paddingRight="20dp"
-        android:gravity="center"
-        android:text="已有账号立即登录"
-        android:textColor="@color/base_brown"
         android:textSize="16sp" />
 </LinearLayout>
