--- a/app/src/main/res/layout/frg_user.xml
+++ b/app/src/main/res/layout/frg_user.xml
@@ -39,6 +39,7 @@
                        android:layout_marginTop="10dp"
                        android:orientation="horizontal">
                        <TextView
+                           android:id="@+id/tv_vip"
                            android:layout_width="100dp"
                            android:layout_height="30dp"
                            android:layout_alignParentLeft="true"
@@ -79,13 +80,14 @@
                        android:gravity="center"
                        android:textColor="@color/base_gray"
                        android:textSize="14sp"
-                       android:text="看广告，推广可增加更多次数哦~"/>
+                       android:text="推广可增加更多次数哦~"/>
                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="15dp"
                        android:background="@color/gray_divider"/>
                    <LinearLayout
+                       android:id="@+id/btn_invite"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="10dp"
