--- a/app/src/main/res/layout/item_cate.xml
+++ b/app/src/main/res/layout/item_cate.xml
@@ -4,11 +4,11 @@
     android:orientation="vertical">
     <com.android.mb.movie.widget.CircleImageView
         android:id="@+id/iv_cover"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_gravity="center_horizontal"
         android:scaleType="centerCrop"
-        android:src="@mipmap/bg_image_defaults"/>
+        android:src="@mipmap/bg_image"/>
     <TextView
         android:id="@+id/tv_title"
         android:layout_width="match_parent"
