--- a/app/src/main/res/layout/activity_feedback.xml
+++ b/app/src/main/res/layout/activity_feedback.xml
@@ -13,6 +13,7 @@
             android:id="@+id/et_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:minHeight="140dp"
             android:gravity="left"
             android:maxLength="100"
             android:padding="10dp"
