--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -53,4 +53,8 @@
         <item name="android:windowAnimationStyle">@android:style/Animation.Dialog</item>
         <item name="android:backgroundDimEnabled">true</item>
     </style>
+    <style name="StartTheme" parent="AppTheme">
+        <item name="android:windowBackground">@mipmap/bg_splash</item>
+    </style>
+
 </resources>
