--- a/app/src/main/res/layout/activity_account_manage.xml
+++ b/app/src/main/res/layout/activity_account_manage.xml
@@ -158,6 +158,7 @@
         android:textSize="13sp"
         android:gravity="center"
         android:layout_gravity="center"
+        android:visibility="gone"
         android:layout_marginTop="20dp"
         android:background="@mipmap/login_loginbutton"
         android:textColor="@color/white"/>
