--- a/app/src/main/res/layout/frg_user.xml
+++ b/app/src/main/res/layout/frg_user.xml
@@ -57,6 +57,7 @@
                            android:layout_height="30dp"
                            android:layout_alignParentRight="true"
                            android:layout_alignParentBottom="true"
+                           android:visibility="gone"
                            android:layout_marginRight="15dp"
                            android:layout_gravity="bottom"
                            android:gravity="center"
@@ -71,6 +72,7 @@
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:gravity="center"
+                       android:visibility="gone"
                        android:textColor="@color/base_orange"
                        android:textSize="16sp"
                        android:text="看官大人请登录"/>
@@ -78,6 +80,7 @@
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
+                       android:layout_marginTop="10dp"
                        android:textColor="@color/base_gray"
                        android:textSize="14sp"
                        android:text="推广可增加更多次数哦~"/>
