--- a/app/src/main/res/layout/activity_account_manage.xml
+++ b/app/src/main/res/layout/activity_account_manage.xml
@@ -95,6 +95,7 @@
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:orientation="horizontal"
+        android:visibility="gone"
         android:layout_marginTop="1dp"
         android:background="@color/base_theme">
 
@@ -124,6 +125,7 @@
         android:layout_width="match_parent"
         android:layout_height="44dp"
         android:orientation="horizontal"
+        android:visibility="gone"
         android:layout_marginTop="1dp"
         android:background="@color/base_theme">
 
